--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nexus Reborn | Coming Soon to Steam</title>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <script async src="https:///script.js" data-website-id="YOUR_UMAMI_ID"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
 </head>
 
 <body>
